--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassBilling/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassBilling/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.Mvc.Html
-@model Ucommerce.Masterclass.Umbraco.Models.AddressDetailsViewModel
+@model Ucommerce.Masterclass.Models.AddressDetailsViewModel
 
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
