--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCategory/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCategory/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ucommerce.Catalog.Models
-@model Ucommerce.Masterclass.Umbraco.Models.CategoryViewModel
+@model Ucommerce.Masterclass.Models.CategoryViewModel
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
     const string f = "f";
