--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCategoryNavigation/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCategoryNavigation/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Ucommerce.Masterclass.Umbraco.Models
-@model Ucommerce.Masterclass.Umbraco.Models.CategoryNavigationViewModel
+﻿@using Ucommerce.Masterclass.Models
+@model Ucommerce.Masterclass.Models.CategoryNavigationViewModel
 @{
 }
 
