--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassMiniBasket/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassMiniBasket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ucommerce.Masterclass.Umbraco.Models.MiniBasketViewModel
+﻿@model Ucommerce.Masterclass.Models.MiniBasketViewModel
 
 @{
     Layout = null;
