--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassProduct/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassProduct/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ucommerce
 @using Ucommerce.Catalog.Models
-@model Ucommerce.Masterclass.Umbraco.Models.ProductViewModel
+@model Ucommerce.Masterclass.Models.ProductViewModel
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
     
