--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassProductSearchResult/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassProductSearchResult/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ucommerce.Catalog.Models
-@model Ucommerce.Masterclass.Umbraco.Models.ProductListViewModel
+@model Ucommerce.Masterclass.Models.ProductListViewModel
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
 
