--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassShipping/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassShipping/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.Mvc.Html
-@model Ucommerce.Masterclass.Umbraco.Models.ShippingViewModel
+@model Ucommerce.Masterclass.Models.ShippingViewModel
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
 }
