--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/Shared/TwoCol.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/Shared/TwoCol.cshtml
@@ -9,7 +9,7 @@
     <div class="row mt-4">
     
            <div class="col-md-auto">
-                @{ Html.RenderAction("CategoryNavigation", "CategoryNavigation"); }
+                @{ Html.RenderAction("CategoryNavigation", "MasterClassCategoryNavigation"); }
            </div>
         <div class="col-sm">
             @RenderBody()
