--- a/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCheckoutPreview/Index.cshtml
+++ b/src/Ucommerce.Masterclass.Sitecore/Ucommerce.Masterclass.Sitecore/Views/MasterClassCheckoutPreview/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ucommerce.Masterclass.Umbraco.Models.PurchaseOrderViewModel
+﻿@model Ucommerce.Masterclass.Models.PurchaseOrderViewModel
 @{
     Layout = "~/views/shared/TwoCol.cshtml";
 }
